# mediocre-manual-rodents

./: .gitignore  README.md  tsconfig.json
client/html/: index.html
client/src/: index.ts
server/: Cargo.toml
server/src/: logging.rs  main.rs  packets.rs
