[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
tokio = {version = "1", features = ["full"]}
anyhow = "1"

# logging deps
log = "0.4"
log4rs = "1"
linefeed = "0.6"
termion = "1.5"
chrono = "0.4"
chrono-tz = "0.6"
flate2 = "1"